<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".main.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/applayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:theme="@style/AppTheme">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                app:popupTheme="@style/AppTheme">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:backgroundTint="@android:color/white"
                    android:background="@android:color/transparent"
                    android:layout_gravity="start|center_horizontal"
                    android:src="@drawable/ic_back"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:textSize="21sp"
                    android:fontFamily="@font/semibold"
                    android:text="@string/funds"
                    android:textColor="@android:color/white"/>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/background"
            android:layout_below="@id/applayout">


            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:id="@+id/searchView"
                android:layout_height="45dp"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/edit_text"
                android:singleLine="true"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/search"
                android:elevation="2dp"
                android:textSize="18sp"
                android:fontFamily="@font/book_font"
                android:textColorHint="@color/hintColor"
                android:textColor="@color/textColor">

            </AutoCompleteTextView>


            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/view3"

                android:elevation="2dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@+id/imageView"
                android:background="@color/colorBackground"/>


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="9dp"
                android:elevation="2dp"
                android:background="@drawable/edit_text"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_search"
                android:id="@+id/imageView" />

        </RelativeLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/relative_layout"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="gone"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_to_show"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            android:fontFamily="@font/book_font"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />
    </RelativeLayout>
</layout>